# python-project-lvl1

./: .gitignore  Makefile  Makefile.save  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  python-app.yml
brain_games/: __init__.py  __init__.py.save  brain_even.py  cli.py  cli.py.save
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  engine_brain.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
kroch4ka_brain_games.egg-info/: PKG-INFO  SOURCES.txt
